--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         <!-- Екран додавання нового завдання -->
 
         <div class="add-task-screen">
-             <h1>Додати завдання на<br> <span class="selected-date"></span></h1>
+             <h1>Додати завдання на<br> <span class="task-date"></span></h1>
+             <form class="task-form">
               <input type="text" class="task-input" required placeholder="введіть нове завдання">
               <button type="submit" class="add">Додати</button>
               <button class="cancel-add-task">Відміна</button>
-            
+            </form>
         </div>
     </div>
     <script src="main.js"></script>
